intento de codificcar

--- a/src/style.css
+++ b/src/style.css
@@ -1,6 +1,6 @@
 
 
-div {
+ #pagina1{
   background-image: url("http://68.media.tumblr.com/270e071bbb7cf91fda03d60047788367/tumblr_o9u5grtDSY1uzwgsuo1_400.gif");
 background-size:100% 100%;
 }
