--- a/src/style.css
+++ b/src/style.css
@@ -1,6 +1,12 @@
 
+body {
+  background: url("http://68.media.tumblr.com/270e071bbb7cf91fda03d60047788367/tumblr_o9u5grtDSY1uzwgsuo1_400.gif") repeat-x;
+  width: 100%;
+  height: 100%;
+  text-align: center;
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  attachment: fixed;
 
- #pagina1{
-  background-image: url("http://68.media.tumblr.com/270e071bbb7cf91fda03d60047788367/tumblr_o9u5grtDSY1uzwgsuo1_400.gif");
-background-size:100% 100%;
 }
