--- a/src/style.css
+++ b/src/style.css
@@ -1,27 +1,47 @@
 
-
 p1 {
-color: blue;
-font-family: "sans-serif";
+color: #293462;
+background: -webkit-linear-gradient(#293462, #a64942);
+font-family: 'Open Sans', sans-serif;
 font-size:80px;
 font-weight:500px;
-background-color: #21F6D6;
+background-color: #a64942;
 border: black 20px;
 margin: 20px;
-padding: 600px 250px;
+padding: 350px 250px;
 border: 1px solid black;
-
-
 }
 
+
+
 body {
-  background: url("https://media2.giphy.com/media/jbKsZBIzlyA0g/giphy.gif") repeat-x;
+  background: url("https://image.freepik.com/vector-gratis/streaming-fondo-codigo-binario_97886-225.jpg") repeat-x;
   width: 100%;
-  height: 100%;
+  height: 200%;
   text-align: center;
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
   attachment: fixed;
 
+}
+
+.button_example{
+border:1px solid #77021D;-webkit-box-shadow: #FFFFFF 0px 0px 1px inset;-moz-box-shadow: #FFFFFF 0px 0px 1px inset; box-shadow: #FFFFFF 0px 0px 1px inset; -webkit-border-radius: 3px; -moz-border-radius: 3px;border-radius: 3px;font-size:13px;font-family:arial, helvetica, sans-serif; padding: 7px 10px 7px 10px; text-decoration:none; display:inline-block;text-shadow: 0px 2px 0 rgba(0,0,0,0.5);font-weight:bold; color: #FFFFFF;
+ background-color: #FE5F55; background-image: -webkit-gradient(linear, left top, left bottom, from(#FE5F55), to(#FE5F55));
+ background-image: -webkit-linear-gradient(top, #FE5F55, #FE5F55);
+ background-image: -moz-linear-gradient(top, #FE5F55, #FE5F55);
+ background-image: -ms-linear-gradient(top, #FE5F55, #FE5F55);
+ background-image: -o-linear-gradient(top, #FE5F55, #FE5F55);
+ background-image: linear-gradient(to bottom, #FE5F55, #FE5F55);filter:progid:DXImageTransform.Microsoft.gradient(GradientType=0,startColorstr=#FE5F55, endColorstr=#FE5F55);
+}
+
+.button_example:hover{
+ border:1px solid #77021D;
+ background-color: #9232A1; background-image: -webkit-gradient(linear, left top, left bottom, from(#9232A1), to(#082480));
+ background-image: -webkit-linear-gradient(top, #9232A1, #082480);
+ background-image: -moz-linear-gradient(top, #9232A1, #082480);
+ background-image: -ms-linear-gradient(top, #9232A1, #082480);
+ background-image: -o-linear-gradient(top, #9232A1, #082480);
+ background-image: linear-gradient(to bottom, #9232A1, #082480);filter:progid:DXImageTransform.Microsoft.gradient(GradientType=0,startColorstr=#9232A1, endColorstr=#082480);
 }
